main.css
html {
  background: #333333;
}

.box {
  width: 90vh;
  max-width: 600px;

  margin: auto;
  padding-top: 20px;
  padding-bottom: 45px;
  background: #222222;
  border-radius: 50px;
}

.flex {
  margin: 1vh;
  display: flex;
  justify-content: space-between;

  width: 95%;
  margin: auto;
}

#side {

}

h1 {
  text-align: center;
  font-family: "PT Sans", sans-serif;
  margin-bottom: 2vh;
  font-size: 45px;
  color: aqua;
}

h2 {
  font-size: 28px;
  height: 25px;
}

.text {
  font-family: "PT Sans", sans-serif;
  user-select: none;
}

footer {
  position: fixed;
  bottom: 0;
  right: 0;
  font-family: "PT Sans", sans-serif;
}

button {
  border: none;
  cursor: pointer;
  appearance: none;
  background-color: inherit;
}

img {
  width: 85px;
  aspect-ratio: 1;
}

.align {
  margin:auto;
  width: 95%;
}

.tiles-container {
  display: grid;
  grid-template-columns: repeat(4, auto);
  gap: 3px;
}

.tile {
  background: #111111;
  border: 3px solid #444444;
  cursor: pointer;
  border-radius: 3px;
  aspect-ratio:1;
}

.green-tile {
  background: rgb(0, 113, 0);
  border-radius: 3px;
}

.wrong-tiles {
  margin-top: 2%;
  display: grid;
  grid-template-columns: repeat(5, 50px);
  gap: 2px;
  padding: 2px;
  border-radius: 8px;
}

.wrong-tile {
  height: 48px;
  background: #111111;
  border: 1px solid #444444;
  border-radius: 5px;
}

.btn,
.but {
  cursor: pointer;
}

.messages {
  font-family: "PT Sans", sans-serif;
}

#left {
  float: left;
}

.reset {
  margin-right: 15px;
  margin-top: 15px;
  float: right;
}

.radio {
  background: #454857;
  margin-top:3%;
  max-width: 100%;
  padding: 4px;
  border-radius: 3px;
  box-shadow: inset 0 0 0 3px rgba(35, 33, 45, 0.3);
}

.radio input {
  height: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
  cursor: pointer;
  border-radius: 2px;
  padding: 4px 8px;
  background: #454857;
  color: #bdbdbdbd;
  font-size: 14px;
  font-family: "PT Sans", sans-serif;
  transition: all 100ms linear;
}

.radio input:checked {
  background-image: linear-gradient(180deg, #95d891, #74bbad);
  color: #fff;
}

.radio input:before {
  content: attr(label);
  display: inline-block;
  text-align: center;
  width: 100%;
}

